--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
     "mysql2": "^3.9.2",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "sequelize": "^6.37.1"
   }
