--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "seed": "node seeds/index.js"
   },
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "npm": "6.x"
   },
   "keywords": [],
   "author": "",
